--- a/Hover Gallery/index.html
+++ b/Hover Gallery/index.html
@@ -15,6 +15,8 @@
         <div class="card"><img src="./images/boat-4.jpg" alt="image of a boat"></div>
         <div class="card"><img src="./images/boat-5.jpg" alt="image of a boat"></div>
         <div class="card"><img src="./images/boat-6.jpg" alt="image of a boat"></div>
+        <div class="card"><img src="./images/boat-7.jpg" alt="image of a boat"></div>
+        <div class="card"><img src="./images/boat-8.jpg" alt="image of a boat"></div>
     </div>
     
 </body>
